--- a/contact.html
+++ b/contact.html
@@ -3,39 +3,46 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body style="font-family:'Verdana'">
-    <h2>My Contact Details</h2>
-    <hr size="2" noshade>
-      <ul>
-        <li>Name: Soumyaranjan Ghadei</li>
-        <li>Email: soumyaranjan6877@gmail.com</li>
-        <li>Phno: (+91) 7609996288</li>
-        <li>Address: New Phalsamunda,I.T.P.S,Banharpali, Dist-Jharsuguda, State-Odisha, pin-768234</li>
-      </ul>
-      <form action="mailto:rashmi7751841655@gmail.com" method="post" enctype="text/plaina">
-        <table>
-          <tr>
-            <td>
-              <label >Enter your name</label>
-            </td>
-            <td>
-              <input type="text" name="yourName" value="">
-            </td>
-          </tr>
-          <tr>
-            <td><label for="email">Email</label></td>
-            <td><input type="email" name="yourMail" value=""></td>
-          </tr>
-          <tr>
-            <td><label for="suggest">Do you want free update news from us?</label></td>
-            <td><input type="checkbox" name="" value=""></td>
-          </tr>
-        </table
-        <label for="">Your message:</label><br>
-        <textarea name="youressage" rows="10" cols="30"></textarea><br>
-          <input type="submit" name="submit" value="submit">
-      </form>
+  <body>
+    <div class="content">
+      <h2>My Contact Details</h2><br>
+        <ul>
+          <li>Name: Soumyaranjan Ghadei</li>
+          <li>Email: soumyaranjan6877@gmail.com</li>
+          <li>Phno: (+91) 7609996288</li>
+          <li>Address: New Phalsamunda,I.T.P.S,Banharpali, Dist-Jharsuguda, State-Odisha, pin-768234</li>
+        </ul>
+        <br><br>
+        <form action="mailto:rashmi7751841655@gmail.com" method="post" enctype="text/plaina">
+          <table>
+            <tr>
+              <td>
+                <label >Enter your name</label>
+              </td>
+              <td>
+                <input type="text" name="yourName" value="">
+              </td>
+            </tr>
+            <tr>
+              <td><label for="email">Email</label></td>
+              <td><input type="email" name="yourMail" value=""><br></td>
+            </tr>
+
+            <tr>
+              <td><label for="suggest">Do you want free update news from us?</label></td>
+              <td><input type="checkbox" name="" value=""></td>
+            </tr>
+          </table>
+          <br>
+
+          <label for="">Your message:</label><br><br>
+          <textarea name="youressage" rows="10" cols="30"></textarea><br>
+          <br>
+            <input class="btn" type="submit" name="submit" value="submit">
+        </form></div>
+
 
 
   </body>
