--- a/index.html
+++ b/index.html
@@ -6,41 +6,33 @@
   <title>Soumya's Personal Site📱</title>
 
   <link rel="icon" href="images/icon.png" type="image/x-icon">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body style="font-family:'Times New Roman'">
+<body >
+
+<div class="content">
   <table cellspacing="30">
     <tr>
-      <td><img src="images/myprofileimage.png" alt="soumya ranjan's image" width="200"></td>
+      <td><img src="images/myprofileimage.png" alt="soumya ranjan's image"></td>
       <td>
-        <h1><b>Soumyaranjan Ghadei💜</b></h1>
-        <p><em>Founder and CEO of <strong><a href="https://rakiraja7751841655.wixsite.com/codecracker">Codecraker</a></strong></em>.</p>
+        <h1 class="title"><b>Soumyaranjan Ghadei</b></h1>
+        <p>Founder and CEO of <strong><a href="https://rakiraja7751841655.wixsite.com/codecracker">Codecraker.</a></strong></p>
         <p>I am an Android and Web developer.I love Coding.</p>
       </td>
     </tr>
   </table>
-  <hr size="2" noshade>
   <h3>Books and Teaching</h3>
   <ul>
     <li>D. Easley, J. Kleinberg. Networks, Crowds, and Markets: Reasoning About a Highly Connected World. Cambridge University Press, 2010.</li>
-    <ul>
-      <li>This book is based on an inter-disciplinary course that we teach entitled Networks. The book, like the course, is designed at the introductory undergraduate level with no formal prerequisites. To support deeper explorations, most of the
-        chapters are supplemented with optional advanced sections.</li>
-    </ul>
-    <li>J. Kleinberg, E. Tardos. Algorithm Design. Addison Wesley, 2005</li>
-    <ul>
-      <li>This book is based on the undergraduate algorithms course that we both teach. We also use the more advanced parts for our graduate algorithms course.</li>
-    </ul>
-    <li>An on-line course on edX entitled Networks, Crowds, and Markets, with David Easley and Eva Tardos.</li>
 
-    <li>Recent courses at Cornell:</li>
-    <ul>
-      <li>Networks (with David Easley and Eva Tardos; ECON 2040 / SOC 2090 / CS 2850 / INFO 2040).
-        The Structure of Information Networks (CS 6850).
-        Algorithms (CS 6820).</li>
+    <li>J. Kleinberg, E. Tardos. Algorithm Design. Addison Wesley, 2005</li>
+
+    <li>An on-line course on edX entitled Networks, Crowds, and Markets, with David Easley and Eva Tardos.</li>
     </ul>
   </ul>
-<hr size="2" noshade>
+  <br>
+  <br>
   <h3>Work Experience</h3>
   <table cellspacing="5">
     <thead>
@@ -58,7 +50,7 @@
       </tr>
     </tbody>
   </table>
-  <hr size="2" noshade>
+  <br><br>
   <h3>Skills</h3>
   <table>
     <tr>
@@ -95,11 +87,10 @@
     </td>
     </tr>
   </table>
-  <hr size="2" noshade>
-  <h3><a href="hobbies.html" target="_blank">My Hobbies</a> <a href="contact.html" target="_blank
-    ">Contact Me</a></h3>
-
-
+  <br><br>
+  <a href="hobbies.html" target="_blank">My Hobbies</a>
+  <a href="contact.html" target="_blank">Contact Me</a>
+</div>
 </body>
 
 </html>
